--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,4 +14,5 @@ jobs:
         server: ftp.marfo.cz
         username: k64.marfo.cz
         password: ${{ secrets.FTP_PASSWORD }}
+        local-dir: ./k64-dir/
         dry-run: true
