--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,7 +13,7 @@ jobs:
       uses: actions/checkout@v3
     
     - name: 📂 Sync files
-      uses: SamKirkland/FTP-Deploy-Action@4.3.3
+      uses: SamKirkland/FTP-Deploy-Action@3.0.0
       with:
 #         server: ftp.marfo.cz
 #         username: k64.marfo.cz
@@ -26,5 +26,5 @@ jobs:
         password: ${{ secrets.FTP_PWD_2 }}
         local-dir: ./k64-dir/
         server-dir: ./marfo.cz/
-        post: 21
+        port: 21
         timeout: 300000
