--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,7 +13,7 @@ jobs:
       uses: actions/checkout@v3
     
     - name: 📂 Sync files
-      uses: SamKirkland/FTP-Deploy-Action@3.0.0
+      uses: SamKirkland/FTP-Deploy-Action@4.3.3
       with:
 #         server: ftp.marfo.cz
 #         username: k64.marfo.cz
@@ -28,3 +28,4 @@ jobs:
         server-dir: ./marfo.cz/
         port: 21
         timeout: 300000
+        passive: true
