--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,7 +2,7 @@ on:
   push:
     branches:
       - master
-name: 🚀 Deploy website on push
+name: 🚀 Deploy website on push - vendor
 jobs:
   web-deploy:
     name: 🎉 Deploy
@@ -15,17 +15,9 @@ jobs:
     - name: 📂 Sync files
       uses: SamKirkland/FTP-Deploy-Action@4.3.3
       with:
-#         server: ftp.marfo.cz
-#         username: k64.marfo.cz
-#         password: ${{ secrets.FTP_PASSWORD }}
-#         local-dir: ./k64-dir/vendor/asm89/
-#         server-dir: ./tmp/
-#         timeout: 300000
         server: 62.109.154.63
         username: multi_532773
         password: ${{ secrets.FTP_PWD_2 }}
         local-dir: ./k64-dir/vendor/
         server-dir: ./marfo.cz/vendor/
         port: 21
-        timeout: 300000
-        passive: true
