--- a/.github/workflows/main2.yml
+++ b/.github/workflows/main2.yml
@@ -2,7 +2,7 @@ on:
   push:
     branches:
       - master
-name: 🚀 Deploy website on push - vendor
+name: 🚀 Deploy website on push - all apart of core
 jobs:
   web-deploy:
     name: 🎉 Deploy
@@ -24,5 +24,5 @@ jobs:
           **/.git*
           **/.git*/**
           **/node_modules/**
-          ./web/core/*
-          ./vendor/*
+          web/core/**
+          vendor/**
