--- a/k64-dir/composer.json
+++ b/k64-dir/composer.json
@@ -20,6 +20,7 @@
         "drupal/core-composer-scaffold": "^10.0",
         "drupal/core-project-message": "^10.0",
         "drupal/core-recommended": "^10.0",
+        "drupal/restrict_node_view_page": "^1.1",
         "drupal/restui": "^1.21"
     },
     "conflict": {
