--- a/.github/workflows/main2.yml
+++ b/.github/workflows/main2.yml
@@ -19,4 +19,4 @@ jobs:
         username: multi_532773
         password: ${{ secrets.FTP_PWD_2 }}
         local-dir: ./k64-dir/vendor/
-        server-dir: ./marfo.cz/_sub/admin/vendor/
+        server-dir: ./sachkobylisy.cz/_sub/admin/vendor/
