--- a/k64-dir/composer.json
+++ b/k64-dir/composer.json
@@ -18,6 +18,7 @@
         "composer/installers": "^2.0",
         "drupal/admin_toolbar": "^3.3",
         "drupal/calendar_view": "^2.0",
+        "drupal/color_field": "^3.0",
         "drupal/core-composer-scaffold": "^10.0",
         "drupal/core-project-message": "^10.0",
         "drupal/core-recommended": "^10.0",
