--- a/k64-dir/react_app/package.json
+++ b/k64-dir/react_app/package.json
@@ -11,6 +11,7 @@
     "react-big-calendar": "^1.6.8",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
+    "react-helmet-async": "^1.3.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
