--- a/k64-dir/react_app/package.json
+++ b/k64-dir/react_app/package.json
@@ -3,16 +3,25 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@chrisoakman/chessboardjs": "^1.0.0",
     "@frank-mayer/react-tag-cloud": "^1.1.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/jest": "^29.5.0",
+    "@types/node": "^18.15.3",
+    "@types/react": "^18.0.28",
+    "@types/react-dom": "^18.0.11",
+    "chess.js": "^1.0.0-beta.4",
+    "html-react-parser": "^3.0.12",
+    "lichess-pgn-viewer": "^1.5.5",
     "react": "^18.2.0",
     "react-big-calendar": "^1.6.8",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
     "react-helmet-async": "^1.3.0",
     "react-scripts": "5.0.1",
+    "typescript": "^5.0.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
