--- a/k64-dir/react_app/package.json
+++ b/k64-dir/react_app/package.json
@@ -3,8 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@chrisoakman/chessboardjs": "^1.0.0",
     "@frank-mayer/react-tag-cloud": "^1.1.1",
+    "@mliebelt/pgn-viewer": "^1.5.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -14,6 +14,7 @@
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
     "react-helmet-async": "^1.3.0",
+    "react-image-gallery": "^1.2.11",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
